Retail Lending-Production/src/objects/Co_Owner__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Co-Owners</relationshipLabel>
        <relationshipName>Co_Owners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Projects__c</referenceTo>
        <relationshipLabel>Co-Owners</relationshipLabel>
        <relationshipName>Co_Owners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Co-Owners</relationshipLabel>
        <relationshipName>Co_Owners</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit</label>
        <referenceTo>Unit__c</referenceTo>
        <relationshipLabel>Co-Owners</relationshipLabel>
        <relationshipName>Co_Owners</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Co-Owner</label>
    <nameField>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Co-Owners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>